--- a/focus.html
+++ b/focus.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-	<img src="https://imgur.com/a/bGiPy6m" alt="background" width="42" height="42">
+	<img href="https://imgur.com/a/bGiPy6m" alt="background" width="42" height="42">
 </body>
 
 </html>
