--- a/focus.html
+++ b/focus.html
@@ -33,7 +33,8 @@
 </head>
 
 <body>
-	<img href="https://imgur.com/a/bGiPy6m" alt="background" width="42" height="42">
+	<a href="http://imgbox.com/9qwj7TOi" target="_blank">
+		<img src="https://thumbs2.imgbox.com/b4/39/9qwj7TOi_t.gif" alt="image host"/></a>
 </body>
 
 </html>
