--- a/focus.html
+++ b/focus.html
@@ -42,7 +42,7 @@
 
 <header><div>
 	       <img src="https://media.discordapp.net/attachments/612700784370647053/618965343594872835/received_2364425360251299.jpeg?width=385&height=508" alt="image host"/></a>
-	       <i class="material-icons">You</i>
+	       <i class="material-icons"></i>
 </div></header>
 	       
 		<img src="https://thumbs2.imgbox.com/b4/39/9qwj7TOi_t.gif" alt="Mint"/></a>
