--- a/focus.html
+++ b/focus.html
@@ -77,7 +77,7 @@
 		 line-height: 	22px
 		 ">
 				  
-   <span> Job Lurker</span>
+   <span> Arts by RE-paring  (ESCA)</span>
 </p>
 
    <table	cellpadding= "0"   
