--- a/focus.html
+++ b/focus.html
@@ -77,7 +77,7 @@
 		 line-height: 	22px
 		 ">
 				  
-   <span> Arts by RE-paring  (ESCA)</span>
+   <span>CCSA VP Inventory</span>
 </p>
 
    <table	cellpadding= "0"   
@@ -305,7 +305,7 @@
 	    
 	    <td style="padding: 0px;">
 
-<a href=	 "https://		"
+<a href=	 "https://boulcair.github.io/Coffre/tuga.htmlr"
    style=	 "text-decoration: 	none;
 		  color: 		rgb(154, 154, 154);
 		  font-size: 		12px;
