--- a/focus.html
+++ b/focus.html
@@ -305,7 +305,7 @@
 	    
 	    <td style="padding: 0px;">
 
-<a href=	 "https://boulcair.github.io/Coffre/tuga.htmlr"
+<a href=	 "https://boulcair.github.io/Coffre/tuga.html"
    style=	 "text-decoration: 	none;
 		  color: 		rgb(154, 154, 154);
 		  font-size: 		12px;
